# applecast-cli

./: Cargo.toml  README.md  claude.md
docs/: BUILD_LOG.md
output/: episode.html  metadata.json
specs/slices/: step-1_CLI-Bootstrap.md  step-2_fetch-html.md  step-3_extract-metadata.md  step-4_download-transcript.md
src/: main.rs
tests/: cli_tests.rs
