[package]
name = "applecast-cli"
version = "0.1.0"
edition = "2021"
authors = ["Giorgos Ampavis"]
description = "A CLI tool for fetching and processing Apple Podcasts content"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
