[package]
name = "applecast-cli"
version = "0.1.0"
edition = "2021"
authors = ["Giorgos Ampavis"]
description = "A CLI tool for fetching and processing Apple Podcasts content"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
